# sigma-rs

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  README.md  TODO.md  install.ps1  install.sh  test.tptp
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: ask.rs  config.rs  git.rs  lib.rs  main.rs  progress.rs  prover.rs  style.rs
crates/cli/src/cli/: args.rs  args_project.rs  ask.rs  ask_tui.rs  audit.rs  casc.rs  check.rs  config_cmd.rs  config_tui.rs  debug.rs  load.rs  man.rs  mod.rs  profile.rs  proof.rs  search.rs  serve.rs  sweep.rs  test.rs  translate.rs  update.rs  util.rs  validate.rs
crates/core/: Cargo.toml  README.md  build.rs
crates/core/src/: canonical.rs  clock.rs  diagnostic.rs  error.rs  gf64.rs  kb.rs  layer.rs  lib.rs  lookup.rs  natural_lang.rs  numeric.rs  parser.rs  progress.rs  semantic.rs  session_tags.rs  sine.rs  store.rs  tokenizer.rs  tptp.rs  types.rs
crates/core/src/cache/: backends.rs  behaviors.rs  events.rs  frontends.rs  mod.rs  persistence.rs  router.rs
crates/core/src/cnf/: clause.rs  mod.rs  skolem.rs
crates/core/src/kb/: assemble.rs  cnf.rs  dis.rs  doxastic.rs  error.rs  export.rs  ingest.rs  man.rs  mod.rs  natural_lang.rs  persist.rs  progress.rs  proof_prose.rs  prove.rs  reconcile.rs  search.rs  semantics.rs  session.rs  session_tags.rs  sine.rs  store.rs
crates/core/src/parse/: ast.rs  dialect.rs  doc.rs  document.rs  error.rs  fingerprint.rs  mod.rs  span.rs
crates/core/src/persist/: backend.rs  commit.rs  env.rs  load.rs  mod.rs  path_index.rs
crates/core/src/prover/: axiom_source.rs  mod.rs  result.rs  scale.rs  subprocess.rs
crates/core/src/semantics/: cache.rs  consts.rs  errors.rs  mod.rs  query.rs  relation.rs  render.rs  roles.rs  taxonomy.rs  types.rs  validate.rs
crates/core/src/syntactic/: collect.rs  display.rs  index.rs  intern.rs  load.rs  lookup.rs  mod.rs  persist.rs  position.rs  remove.rs  select.rs  sentence.rs  tests.rs
crates/core/src/tptp/: kif.rs  mod.rs  test_case.rs
crates/core/src/trans/: annotations.rs  arith.rs  builtins.rs  cache.rs  errors.rs  formulas.rs  literal.rs  lower.rs  lower_thf.rs  mod.rs  numeric.rs  operator.rs  poly_expand.rs  sort.rs  symbol.rs  term_sorts.rs  tests.rs  types.rs
crates/core/src/vampire/: assemble.rs  axiom_source.rs  bindings.rs  mod.rs  native_proof.rs
crates/core/tests/: cnf_backfill.rs  cnf_test.rs  cold_open_bench.rs  converter_reified_quantifiers.rs  dedup.rs  dedup_bench.rs  file_diff.rs  findings.rs  ingest_bench.rs  invalidation_bench.rs  java_comparison.rs  phase_a_regression.rs  promote.rs  sine.rs  sumo_to_tptp_fof.rs  sumo_to_tptp_tff.rs  sumo_to_tptp_tff_integration.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: conv.rs  lib.rs  main.rs  server.rs  state.rs
crates/lsp/src/handlers/: completion.rs  diagnostics.rs  format.rs  goto.rs  hover.rs  kb.rs  mod.rs  references.rs  rename.rs  semantic_tokens.rs  symbols.rs  taxonomy.rs  workspace_symbols.rs
crates/lsp/tests/: init_flow.rs  lsp-smoke.js  phase3_handlers.rs  phase4_handlers.rs  phase5_handlers.rs
crates/mcp/: Cargo.toml  README.md
crates/mcp/src/: lib.rs  main.rs  render.rs  server.rs
crates/native/: Cargo.toml
crates/native/src/: ask.rs  cache.rs  config.rs  lib.rs  main.rs  prover.rs
crates/native/src/cli/: args.rs  ask.rs  load.rs  man.rs  mod.rs  test.rs  translate.rs  util.rs  validate.rs
crates/sdk/: Cargo.toml  README.md
crates/sdk/src/: ask.rs  error.rs  freshness.rs  ingest.rs  lib.rs  load.rs  man.rs  test.rs  translate.rs  validate.rs
crates/sdk/src/manager/: meta.rs  mod.rs  sources.rs  write.rs
crates/sdk/src/report/: ask.rs  ingest.rs  load.rs  test.rs  translate.rs  validate.rs
crates/sdk/src/session/: ask.rs  ingest.rs  man.rs  mod.rs  ops.rs
crates/sdk/src/source/: git.rs  mod.rs  tptp.rs
crates/sdk/tests/: ask_smoke.rs  ingest_smoke.rs  load_smoke.rs  manpage_view_smoke.rs  test_smoke.rs  translate_smoke.rs  validate_smoke.rs
crates/store/: Cargo.toml
crates/store/src/: cnf.rs  commit.rs  display.rs  env.rs  lib.rs  load.rs  path_index.rs  schema.rs  tptp_cnf.rs
crates/sumo-kb/: Cargo.toml
crates/sumo-kb/examples/: profile_ask.rs
crates/sumo-kb/src/: axiom_source.rs  canonical.rs  cnf.rs  cnf2.rs  diagnostic.rs  embedded_prover.rs  error.rs  fingerprint.rs  kb.rs  kif_store.rs  lib.rs  lookup.rs  parser.rs  profiling.rs  progress.rs  prover.rs  semantic.rs  sine.rs  tokenizer.rs  tptp.rs  types.rs
crates/sumo-kb/src/kb/: export.rs  man.rs  mod.rs  prove.rs  reconcile.rs
crates/sumo-kb/src/parse/: ast.rs  document.rs  fingerprint.rs  mod.rs
crates/sumo-kb/src/persist/: commit.rs  env.rs  load.rs  mod.rs  path_index.rs
crates/sumo-kb/src/prover/: embedded.rs  mod.rs  subprocess.rs
crates/sumo-kb/src/tptp/: kif.rs  mod.rs  names.rs  options.rs  test_case.rs  tests.rs  tff.rs  translate.rs
crates/sumo-kb/src/vampire/: assemble.rs  bindings.rs  convert.rs  converter.rs  mod.rs  native_proof.rs
crates/sumo-kb/tests/: cnf_backfill.rs  cnf_test.rs  cold_open_bench.rs  converter_reified_quantifiers.rs  dedup.rs  dedup_bench.rs  file_diff.rs  findings.rs  ingest_bench.rs  invalidation_bench.rs  phase_a_regression.rs  promote.rs  sine.rs
crates/sumo-lsp/: Cargo.toml
crates/sumo-lsp/src/: conv.rs  server.rs  state.rs
crates/sumo-lsp/src/handlers/: completion.rs  diagnostics.rs  format.rs  goto.rs  hover.rs  kb.rs  mod.rs  references.rs  rename.rs  semantic_tokens.rs  symbols.rs  (+2 more)
crates/sumo-lsp/tests/: phase3_handlers.rs
crates/sumo-sdk/: Cargo.toml  README.md
crates/sumo-sdk/src/: ask.rs  error.rs  ingest.rs  lib.rs  load.rs  man.rs  test.rs  translate.rs  validate.rs
crates/sumo-sdk/tests/: ask_smoke.rs  ingest_smoke.rs  load_smoke.rs  manpage_view_smoke.rs  test_smoke.rs  translate_smoke.rs  validate_smoke.rs
crates/wasm/: .gitignore  Cargo.toml  README.md  build-npm.sh  serve.sh
crates/wasm/examples/: driver.ts  node-demo.mjs
crates/wasm/js/: sdk.d.ts  sdk.mjs
crates/wasm/npm/: package.json
crates/wasm/src/: lib.rs
crates/wasm/web/: app.js  github.js  index.html  sigma.worker.js
(+195 files in other folders)
