[workspace]
members  = ["crates/sumo-kb", "crates/wasm", "crates/cli", "crates/sumo-lsp"]
resolver = "2"

[workspace.package]
version     = "1.0.0"
edition     = "2021"
authors     = ["Theodore Kim", "Adam Pease"]
license     = "GPL-3.0"

[workspace.dependencies]
sumo-kb           = { path = "crates/sumo-kb" }
sigmakee          = { path = "crates/cli" }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
thiserror         = "2"
inline_colorization        = "0.1.6"
log                        = "0.4"
