[package]
name    = "sigmakee"
version.workspace = true
edition.workspace = true
# `build.rs` embeds provenance (release vs. source) for `sumo update`
# to dispatch correctly.  See the script for details.
build   = "build.rs"

[[bin]]
name = "sumo"
path = "src/main.rs"

[lib]
name = "sigmakee"
path = "src/lib.rs"

[features]
# Default build is the full experience: IR pipeline + embedded C++
# Vampire + fine-grained profiling.  Translate / validate / load /
# ask / test all available, and `--profile` produces the full
# per-phase breakdown.  When no profiler is installed on the KB
# every `span()` is a no-op, so this flag carries no cost in
# non-profiling runs. Also enables JSON RPC API used for language
# server
default = ["parallel", "server"]

# Pure-Rust path with subprocess prover: translate / validate / load
# PLUS ask / test, running against an external `vampire` binary.
# No CMake required.
ask = ["sigmakee-rs-sdk/ask"]

# Everything in `ask` plus the embedded C++ solver (CMake + the
# vampire-sys submodule).  Unlocks `--backend embedded` on `sumo ask`
# and native-proof binding extraction.
integrated-prover = ["ask", "sigmakee-rs-sdk/integrated-prover"]

# Phase timing was previously feature-gated as `profiling`.  It now
# rides on the unified progress-event system: `--profile` installs
# an aggregator sink that listens for `ProgressEvent::PhaseStarted`/
# `PhaseFinished` and reports per-phase totals.  Always available.

# Parallel KB hot paths via rayon.  Speeds up multi-file load (reads
# in parallel) and bootstrap-scale CNF clausification (inside
# sigmakee-rs-core).  NOT on wasm32.  On by default along with `profiling`
# for release-native builds.
parallel = ["sigmakee-rs-sdk/parallel", "dep:rayon"]

# Enable the JSON RPC server which allows you to utilize the cli
# programmatically like via an IDE. Requires ask but not integrated
# prover
server = ["ask"]

[dependencies]
sigmakee-rs-core = { workspace = true, features = ["persist"] }
sigmakee-rs-sdk = { workspace = true }
rayon   = { version = "1.10", optional = true }
serde.workspace            = true
serde_json.workspace       = true
inline_colorization.workspace = true
log.workspace              = true
clap                       = { version = "4", features = ["derive"] }
env_logger                 = "0.11"
quick-xml = { version = "0.37", features = ["serialize", "overlapped-lists"] }
minus = { version = "5", features = ["static_output", "search"] }
crossterm                  = "0.28"
# `sumo update` self-replaces from the latest GitHub release when the
# binary was built by the official release CI.  Source builds use the
# crate solely to query the GitHub releases API for the latest tag.
self_update = { version = "0.44", default-features = false, features = ["rustls", "archive-tar", "archive-zip", "compression-flate2", "ureq"] }
# `rand` is only used by `sumo debug`, which is ask-gated.  Pulled in
# unconditionally to avoid feature gymnastics on a tiny (~200 KB) dep —
# `cargo tree` already shows it transitively through vampire-sys etc.
rand = "0.8"
