[package]
name    = "sumo-lsp"
version.workspace = true
edition.workspace = true

# Standalone stdio language-server binary for KIF / SUMO.  Editor
# integration (VSCode, Neovim, Helix, Emacs, Zed) lives in
# downstream extension repositories; this crate is protocol-only.
[[bin]]
name = "sumo-lsp"
path = "src/main.rs"

[lib]
name = "sumo_lsp"
path = "src/lib.rs"

[dependencies]
# sigmakee-rs-core gives us the parser, semantic layer, manpage data, and
# every type the LSP handlers thread through.  No `ask` /
# `integrated-prover` / `cnf` / `persist` features — LSP wants
# parse + validate + manpage and nothing else (no Vampire, no CMake,
# no LMDB).
sigmakee-rs-core    = { workspace = true, default-features = false }

# sigmakee-rs-sdk wraps sigmakee-rs-core's mutation primitives in builder-shaped
# operations with structured reports (IngestOp, ValidateOp, etc.).
# The LSP uses it for batch ingest in the `setActiveFiles` handler
# and for the structured `manpage_view` projection in hover.
# `default-features = false` keeps LMDB and the prover out of the
# LSP's dep graph — same posture as the sigmakee-rs-core dep above.
sigmakee-rs-sdk     = { workspace = true, default-features = false }

lsp-server      = "0.7"
lsp-types       = "0.95"
crossbeam-channel = "0.5"
ropey           = "1.6"
url             = "2.5"
serde.workspace = true
serde_json.workspace = true
log.workspace   = true
env_logger      = "0.11"
anyhow          = "1"
