[package]
name    = "sumo-lsp"
version.workspace = true
edition.workspace = true

# Standalone stdio language-server binary for KIF / SUMO.  Editor
# integration (VSCode, Neovim, Helix, Emacs, Zed) lives in
# downstream extension repositories; this crate is protocol-only.
[[bin]]
name = "sumo-lsp"
path = "src/main.rs"

[lib]
name = "sumo_lsp"
path = "src/lib.rs"

[dependencies]
# sigmakee-rs-sdk is the LSP's ONLY sigma dependency: the shared KB is held
# as a `Session<TranslationLayer>`, SDK-level ops (`manpage`, ingest, …) are
# called on it directly, and everything else (parser, tokenizer, offset /
# occurrence introspection) reaches core through the SDK's re-exports and
# the `Session::kb()` / `kb_mut()` escape hatches.  No direct
# sigmakee-rs-core dep — if a core item is missing here, re-export it from
# the SDK instead of re-adding core.
#
# `default-features = false` keeps LMDB (`persist`), the provers (`ask`),
# rayon (`parallel`), and the remote sources (`http`/`git`) out of the
# LSP's dep graph — LSP wants parse + validate + manpage and nothing else
# (no Vampire, no CMake, no LMDB).
#
# NOTE: deliberately a direct path dep, NOT `workspace = true`.
# Workspace inheritance ignores a member's `default-features = false`
# (cargo warns: "default-features is ignored … since default-features
# was not specified for workspace.dependencies"), which silently
# dragged `ask` (Vampire), `persist` (LMDB), and `parallel` (rayon)
# back into the LSP's graph.  Pinning the path lets the opt-out take
# effect, holding the lean posture the comment above promises.
sigmakee-rs-sdk     = { path = "../sdk", default-features = false }

lsp-server      = "0.7"
lsp-types       = "0.95"
crossbeam-channel = "0.5"
ropey           = "1.6"
url             = "2.5"
serde.workspace = true
serde_json.workspace = true
log.workspace   = true
env_logger      = "0.11"
anyhow          = "1"
