[package]
name    = "sumo-native"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sumo"
path = "src/main.rs"

[lib]
name = "sumo_native"
path = "src/lib.rs"

[features]
# Default build is the full experience: IR pipeline + embedded C++
# Vampire.  Translate / validate / load / ask / test all available.
default = ["integrated-prover"]

# Pure-Rust path: translate / validate / load PLUS ask / test via the
# IR-based pipeline.  The subprocess prover is available (needs a
# vampire binary on PATH); the embedded solver is not.  No CMake
# required.
vampire = ["sumo-kb/vampire"]

# Everything in `vampire` plus the embedded C++ solver (CMake + the
# vampire-sys submodule).  Unlocks `--backend embedded` on `sumo ask`
# and native-proof binding extraction.
integrated-prover = ["vampire", "sumo-kb/integrated-prover"]

[dependencies]
sumo-kb = { workspace = true, features = ["persist", "cnf"] }
serde.workspace            = true
serde_json.workspace       = true
inline_colorization.workspace = true
log.workspace              = true
clap                       = { version = "4", features = ["derive"] }
env_logger                 = "0.11"
quick-xml = { version = "0.37", features = ["serialize", "overlapped-lists"] }
