[package]
name    = "sumo-native"
version.workspace = true
edition.workspace = true

[[bin]]
name = "sumo"
path = "src/main.rs"

[lib]
name = "sumo_native"
path = "src/lib.rs"

[features]
# Default build is the full experience: IR pipeline + embedded C++
# Vampire.  Translate / validate / load / ask / test all available.
default = ["integrated-prover"]

# Pure-Rust path with subprocess prover: translate / validate / load
# PLUS ask / test, running against an external `vampire` binary.
# No CMake required.
ask = ["sumo-kb/ask"]

# Everything in `ask` plus the embedded C++ solver (CMake + the
# vampire-sys submodule).  Unlocks `--backend embedded` on `sumo ask`
# and native-proof binding extraction.
integrated-prover = ["ask", "sumo-kb/integrated-prover"]

[dependencies]
sumo-kb = { workspace = true, features = ["persist", "cnf"] }
serde.workspace            = true
serde_json.workspace       = true
inline_colorization.workspace = true
log.workspace              = true
clap                       = { version = "4", features = ["derive"] }
env_logger                 = "0.11"
quick-xml = { version = "0.37", features = ["serialize", "overlapped-lists"] }
