[package]
name    = "sigmakee-rs-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Programmatic Rust API over sigmakee-rs-core: load, validate, translate, ask, test."
keywords    = ["sumo", "ontology", "kif", "tptp", "vampire"]
categories  = ["api-bindings", "data-structures"]
readme      = "README.md"

[lib]
name = "sigmakee_rs_sdk"
path = "src/lib.rs"

# docs.rs builds with `--all-features` so every gated module shows up
# (AskOp, TestOp, LoadOp).  `integrated-prover` requires CMake + the
# vampire-sys submodule, which docs.rs can't build, so we stop short
# of `all-features` and instead pick the rich-but-buildable set.
[package.metadata.docs.rs]
features          = ["persist", "ask", "parallel"]
all-features      = false
rustdoc-args      = ["--cfg", "docsrs"]
default-target    = "x86_64-unknown-linux-gnu"

[features]
# Default mirrors sigmakee-rs-core's "everything-on, no C++" sweet spot — the
# SDK is most useful when ask/test work, but we don't force CMake on
# casual consumers.  Equivalent to `sigmakee-rs-core` without `integrated-prover`.
default            = ["persist", "ask", "parallel"]

# 1:1 forwards to the matching sigmakee-rs-core feature.  The SDK never gates
# differently from sigmakee-rs-core; downstream consumers enable here and we
# pass it through.  Activating any of these may change the public
# API surface (e.g. `ask` adds AskOp / TestOp).
persist            = ["sigmakee-rs-core/persist"]
ask                = ["sigmakee-rs-core/ask"]
integrated-prover  = ["ask", "sigmakee-rs-core/integrated-prover"]
parallel           = ["sigmakee-rs-core/parallel", "dep:rayon"]

[dependencies]
sigmakee-rs-core            = { workspace = true }
log.workspace      = true
thiserror.workspace = true
rayon              = { version = "1.10", optional = true }

[dev-dependencies]
tempfile  = "3"
env_logger = "0.11"
