[package]
name    = "sumo-kb"
version.workspace = true
edition.workspace = true

[features]
default = []
# LMDB-backed persistence. Pulls in heed + bincode.
persist = ["dep:heed", "dep:bincode"]
# Theorem proving via subprocess spawning (e.g. Vampire).
# NOT available on wasm32 -- enforced by compile_error! in lib.rs.
ask     = ["dep:regex"]
# CNF clausification. Can be used independently of ask or persist.
cnf     = []
# Pure-Rust IR path: pulls in vampire-prover's IR + TPTP emitter /
# parser but NOT the Vampire C++ library.  Enables `NativeConverter`,
# `assemble_tptp`, and subprocess-prover TPTP generation.  No CMake
# required.  Implies `ask` so the subprocess runner is available.
# NOT on wasm32 -- the subprocess runner uses threads and process
# spawning.
vampire           = ["dep:vampire-prover", "ask"]
# Embedded Vampire prover: additionally links vampire-sys (Vampire C++
# library) via CMake, enabling `ask_embedded` and native-proof binding
# extraction.  Requires CMake 3.10+, a C++ compiler, and the
# vampire-sys/vampire-lib submodule.
# NOT on wasm32.
integrated-prover = ["vampire", "vampire-prover/integrated-prover"]

[dependencies]
# Always present
serde.workspace             = true
serde_json.workspace        = true
thiserror.workspace         = true
log.workspace               = true
inline_colorization.workspace = true
xxhash-rust                 = { version = "0.8.15", features = ["xxh64"] }
once_cell                   = "1.21.4"
smallvec                    = { version = "1", features = ["serde"] }

# persist feature
heed    = { version = "0.20", features = ["serde-bincode"], optional = true }
bincode = { version = "1",                                  optional = true }

# ask feature
regex   = { version = "1", optional = true }

# vampire / integrated-prover features
# `default-features = false` pins us to vampire-prover's pure-Rust IR;
# the C++ backend is pulled in only when `integrated-prover` is enabled.
vampire-prover = { path = "../vampire-rs/vampire", optional = true, default-features = false }

[dev-dependencies]
env_logger = "0.11"
