[package]
name    = "sumo-kb"
version.workspace = true
edition.workspace = true

[features]
default = []
# LMDB-backed persistence. Pulls in heed + bincode.
persist = ["dep:heed", "dep:bincode"]
# Theorem proving: the subprocess prover (spawns a `vampire` process)
# and all `KnowledgeBase::ask*` entry points.
# NOT available on wasm32 -- enforced by compile_error! in lib.rs.
ask     = ["dep:regex"]
# CNF clausification. Can be used independently of ask or persist.
cnf     = []
# Embedded Vampire prover: additionally links vampire-sys (Vampire C++
# library) via CMake, enabling `ask_embedded` and native-proof binding
# extraction.  Requires CMake 3.10+, a C++ compiler, and the
# vampire-sys/vampire-lib submodule.
# NOT on wasm32.
integrated-prover = ["ask", "vampire-prover/integrated-prover"]

# Note: the pure-Rust IR (`vampire_prover::ir::*`) and TPTP emitter /
# parser are ALWAYS available, regardless of features.  They drive
# `NativeConverter`, `assemble_tptp`, and KnowledgeBase's TPTP output
# methods unconditionally.  The `ask` and `integrated-prover` features
# add prover runners on top.

[dependencies]
# Always present
serde.workspace             = true
serde_json.workspace        = true
thiserror.workspace         = true
log.workspace               = true
inline_colorization.workspace = true
xxhash-rust                 = { version = "0.8.15", features = ["xxh64"] }
once_cell                   = "1.21.4"
smallvec                    = { version = "1", features = ["serde"] }

# persist feature
heed    = { version = "0.20", features = ["serde-bincode"], optional = true }
bincode = { version = "1",                                  optional = true }

# ask feature
regex   = { version = "1", optional = true }

# Pure-Rust IR + TPTP parser/emitter, always present.
# `default-features = false` keeps the C++ backend off; the
# `integrated-prover` feature adds it.
vampire-prover = { path = "../vampire-rs/vampire", default-features = false }

[dev-dependencies]
env_logger = "0.11"
